solved the issue of dashboard content staying hidden behind sidebar component

--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -1,14 +1,9 @@
 .dashboard-container{
-    display: flex !important;
-}
-
-.dashboard{
-    margin: 0;
+    padding: 25px;
     background-color: #1B1C30;
-    width: 100%;
     color: antiquewhite;
 }
 
-.dashboard > p{
-    margin-top: 0;
+.dashboard{
+    width: 100%;
 }
